--- a/css/form.css
+++ b/css/form.css
@@ -9,6 +9,21 @@ form {
     margin: 0 auto;
     padding: 10px;
 }
+
+/* Larger than tablet */
+@media (min-width: 768px) {
+    form {
+        max-width: 790px;
+    }
+}
+
+/* Larger than desktop */
+@media (min-width: 1100px) {
+    form {
+        max-width: 960px;
+    }
+}
+
 #ns-container {
     --ns-container-min-height: 36px;
     --ns-button-width: 50px;
@@ -255,6 +270,14 @@ input[disabled] {
 }
 #toggle-search {
     float: right;
-    right: 50px;
+    right: 15px;
     top: 5px;
+}
+
+/* Larger than tablet */
+@media (min-width: 768px) {
+    #toggle-search {
+        float: right;
+        right: 50px;
+    }
 }
