--- a/css/grid.css
+++ b/css/grid.css
@@ -30,6 +30,35 @@ table {
     -webkit-column-break-inside: avoid;
 }
 
+/* Larger than phablet */
+@media (min-width: 550px) {
+    .columns-250 {
+        --image-size: 250px;
+        --column-count: 2 !important;
+    }
+}
+
+/* Larger than tablet */
+@media (min-width: 768px) {
+    .columns-250 {
+        --column-count: 3 !important;
+    }
+}
+
+/* Larger than desktop */
+@media (min-width: 1100px) {
+    .columns-250 {
+        --column-count: 4 !important;
+    }
+}
+
+/* the following prevents the first figure in the 
+ * column to have a margin at the top, a left-over
+ * of the last figure in the previous column */
+ .columns-250 div.carouselbox:last-child {
+    margin: 0;
+}
+
 .columns-100 {
 
     /* settings for the grid */
@@ -51,6 +80,34 @@ table {
     column-gap: var(--column-gap);
     -moz-column-gap: var(--column-gap);
     -webkit-column-gap: var(--column-gap);
+}
+
+/* Larger than phablet */
+@media (min-width: 550px) {
+    .columns-100 {
+        --column-count: 5 !important;
+    }
+}
+
+/* Larger than tablet */
+@media (min-width: 768px) {
+    .columns-100 {
+        --column-count: 7 !important;
+    }
+}
+
+/* Larger than desktop */
+@media (min-width: 1100px) {
+    .columns-100 {
+        --column-count: 10 !important;
+    }
+}
+
+/* the following prevents the first figure in the 
+ * column to have a margin at the top, a left-over
+ * of the last figure in the previous column */
+ .columns-100 div.carouselbox:last-child {
+    margin: 0;
 }
 
 .columns-50 {
@@ -76,88 +133,42 @@ table {
     -webkit-column-gap: var(--column-gap);
 }
 
+/* Larger than mobile */
+@media only screen and (min-width: 400px) {
+    .columns-50 {
+        --column-count: 6 !important;
+    }
+}
+
+/* Larger than phablet */
+@media (min-width: 550px) {
+    .columns-50 {
+        --column-count: 9 !important;
+    }
+}
+
+/* Larger than tablet */
+@media (min-width: 768px) {
+    .columns-50 {
+        --column-count: 13 !important;
+    }
+}
+
+/* Larger than desktop */
+@media (min-width: 1100px) {
+    .columns-50 {
+        --column-count: 18 !important;
+    }
+}
+
 /* the following prevents the first figure in the 
  * column to have a margin at the top, a left-over
  * of the last figure in the previous column */
-.columns-250 div.carouselbox:last-child {
+ .columns-50 div.carouselbox:last-child {
     margin: 0;
 }
 
-figure {
-    position: relative;
-    height: auto;
-    border: 0px solid #444;
-    padding: 10px;
-    opacity: 1;
-    text-align: center;
-}
-figure img.lazyloaded {
-    width: 100%;
-    max-width: 300px;
-}
-figure a:hover {
-    background-color: unset;
-    padding: unset;
-    border: unset;
-    border-radius: unset;
-}
-figure .reveal {
-    background-color: white;
-    color: grey;
-    font-family: sans-serif;
-    font-size: 8px;
-    padding: 2px 4px;
-    cursor: pointer;
-    border: 1px solid grey;
-    border-radius: 5px;
-    text-align: center;
-}
-figure .reveal:hover {
-    background-color: lightgrey;
-    color: black;
-}
 
-figure.figure-250 { 
-    width: var(--image-size); 
-    margin: 0 auto 20px auto;
-}
-figure.figure-100 { 
-    width: 100px; 
-    margin: 0 auto 10px auto;
-}
-figure.figure-100.tb { 
-    width: 100px; 
-    margin: 0 auto 10px auto;
-    border: 1px solid black;
-}
-figure.figure-100.tb .reveal { 
-    display: none;
-}
-figure.figure-50 { 
-    width: 50px; 
-    margin: 0 auto 10px auto;
-}
-figure.tb {
-    padding: 5px;
-    font-family: sans-serif;
-    font-size: 12px;
-}
-figcaption {
-    font-size: 10px;
-/*     font-family: sans-serif; */
-/*     padding: 5px 5px 0 5px; */
-    text-align: left;
-    cursor: pointer;
-}
-figcaption div.closed {
-    height: 0;
-}
-figcaption div.figTitle {
-    font-weight: 800;
-}
-figcaption div.open {
-    height: 100%;
-}
 #grid-images details {
     /* border: 1px solid lightgray; */
     border-radius: 4px;
