--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,93 +1,53 @@
-.slidr,
+/* .slidr, */
 .carouselbox {
-  font-family: helvetica,sans-serif;
-  width: var(--image-size);
-  position: relative;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  box-shadow: 1px 1px 10px 1px #dbd9d5;
-  overflow: hidden;
-  /* avoid figures splitting across columns */
-  /* see https://stackoverflow.com/a/17415553/183692 */
-  overflow: hidden; /* fix for Firefox */
-  break-inside: avoid-column;
-  -webkit-column-break-inside: avoid;
-  page-break-inside: avoid;
-  break-inside: avoid;
-  -webkit-column-break-inside: avoid; 
+    width: var(--image-size);
+    position: relative;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 10px 1px #dbd9d5;
+    overflow: hidden;
+    
+    /* avoid figures splitting across columns */
+    /* see https://stackoverflow.com/a/17415553/183692 */
+    overflow: hidden; /* fix for Firefox */
+    break-inside: avoid-column;
+    -webkit-column-break-inside: avoid;
+    page-break-inside: avoid;
+    break-inside: avoid;
+    -webkit-column-break-inside: avoid; 
 }
-.content {
-  margin: 0;
-  padding: 0;
-  height: auto;
-  /* min-height: 400px; */
+.slides {
+    margin: 0;
+    padding: 0;
 }
-.content .slide {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  z-index: 2;
-  /* min-height: 250px; */
-  height: auto;
+.slide {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    z-index: 2;
+    display: none;
 }
-.content .map {
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+.slide.current {
+    top: 30px;
+    display: block;
 }
-.active {
-  min-height: 250px;
-  height: auto;
+/* .buttons {
+    display: none;
+} */
+.carouselbox .buttons {
+    display: block;
+    padding: 2px 0 6px 0;
+    background: #eee;
+    border-bottom: 1px solid lightgrey;
+    text-align: center;
+    z-index: 10;
+    position: relative;
 }
 .carouselbox button {
-  border: none;
-  visibility: hidden;
-  cursor: pointer;
-}
-.active button {
-  visibility: visible;
-  background-color: #eee;
-}
-.active button:hover {
-  background-color: #eee;
-}
+    border: none;
+    visibility: visible;
+} 
 .offscreen {
-  position: absolute;
-  left: -2000px;
-}
-.active .buttons {
-  padding: 0px 0;
-  text-align: center;
-  z-index: 10;
-  position: relative;
-  border-bottom: 1px solid lightgrey;
-  background-color: #eee;
-}
-/* .active {
-  background: #eee;
-} */
-.active .slide {
-  position: absolute;
-  top: 25px;
-  left: 400px;
-/*   top: 250px; */
-
-/*   opacity: 0; */
-/*   transform: scale(0); */
-  transform: translate(100%);
-  transition: 1s;
-}
-.active .slide.current {
-  top: 25px;
-  left: 0px;
-/*   opacity: 1; */
-/*   transform: scale(1); */
-  transform: translate(0%);
-  transition: 1s;
-}
-div.carouselbox .toggle {
-  margin-top: 6px;
+    position: absolute;
+    left: -2000px;
 }
